; ModuleID = '/home/carl/AnghaBench/linux/arch/arm64/crypto/extr_aes-cipher-glue.c_aes_arm64_decrypt.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm64/crypto/extr_aes-cipher-glue.c_aes_arm64_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.crypto_aes_ctx = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_tfm*, i32*, i32*)* @aes_arm64_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aes_arm64_decrypt(%struct.crypto_tfm* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.crypto_tfm*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.crypto_aes_ctx*, align 8
  %8 = alloca i32, align 4
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.crypto_tfm*, %struct.crypto_tfm** %4, align 8
  %10 = call %struct.crypto_aes_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %9)
  store %struct.crypto_aes_ctx* %10, %struct.crypto_aes_ctx** %7, align 8
  %11 = load %struct.crypto_aes_ctx*, %struct.crypto_aes_ctx** %7, align 8
  %12 = getelementptr inbounds %struct.crypto_aes_ctx, %struct.crypto_aes_ctx* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = sdiv i32 %13, 4
  %15 = add nsw i32 6, %14
  store i32 %15, i32* %8, align 4
  %16 = load %struct.crypto_aes_ctx*, %struct.crypto_aes_ctx** %7, align 8
  %17 = getelementptr inbounds %struct.crypto_aes_ctx, %struct.crypto_aes_ctx* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @__aes_arm64_decrypt(i32 %18, i32* %19, i32* %20, i32 %21)
  ret void
}

declare dso_local %struct.crypto_aes_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @__aes_arm64_decrypt(i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
